@@ -10,7 +10,9 @@ fork := true
 javaOptions ++= Seq(
   "-Xms8G",
   "-Xmx8G",
-  "-XX:+UseG1GC"
+  "-XX:+UseG1GC",
+  "-XX:+UseCompactObjectHeaders",
+  "--sun-misc-unsafe-memory-access=allow"
 )
 
 libraryDependencies ++= Seq(
@@ -18,11 +20,11 @@ libraryDependencies ++= Seq(
   "org.scala-lang.modules" %% "scala-parallel-collections" % "1.2.0",
   "com.mysql" % "mysql-connector-j" % "9.7.0",
   "com.appoptics.agent.java" % "appoptics-sdk" % "6.13.0",
-  "org.apache.pekko" %% "pekko-actor" % "1.0.3",
-  "org.apache.pekko" %% "pekko-stream" % "1.0.3",
-  "org.apache.pekko" %% "pekko-remote" % "1.0.3",
-  "org.apache.pekko" %% "pekko-testkit" % "1.0.3",
-  "org.apache.pekko" %% "pekko-cluster" % "1.0.3",
+  "org.apache.pekko" %% "pekko-actor" % "1.6.0",
+  "org.apache.pekko" %% "pekko-stream" % "1.6.0",
+  "org.apache.pekko" %% "pekko-remote" % "1.6.0",
+  "org.apache.pekko" %% "pekko-testkit" % "1.6.0",
+  "org.apache.pekko" %% "pekko-cluster" % "1.6.0",
   "com.typesafe.play" %%  "play-json" % "2.10.8",
   "org.apache.commons" % "commons-math3" % "3.6.1",
   "com.zaxxer" % "HikariCP" % "5.1.0",
